--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
     description: 'The package name for the package statement. Default: cmd'
     required: false
     default: 'cmd'
+  version:
+    description: 'The Semantic Version of the release. Example: 1.2.3'
+    required: true
         
 runs:
   using: "docker"
@@ -18,7 +21,8 @@ runs:
   args: 
     - ${{ inputs.file }}
     - ${{ inputs.package }}  
-
+    - ${{ inputs.version }} 
+    
 branding:
   icon: "git-pull-request"
   color: "red"
