--- a/action.yml
+++ b/action.yml
@@ -1,40 +1,45 @@
 # action.yml
-name: "Create a version.go file"
-description: "Create a version.go file containing the current GitHub release information."
+name: Create a version.go file
+description: Create a version.go file containing the current GitHub release information.
 author: support@senzing.com
 inputs:
-  file:
-    description: 'The file to create. Default: cmd/version.go'
-    required: false
-    default: 'cmd/version.go'
-  package:
-    description: 'The package name for the package statement. Default: cmd'
-    required: false
-    default: 'cmd'
-        
+   file:
+      description: 'The file to create. Default: cmd/version.go'
+      required: false
+      default: cmd/version.go
+   package:
+      description: 'The package name for the package statement. Default: cmd'
+      required: false
+      default: cmd
+
 runs:
-  using: "composite"
-  steps:  
-    - name: Checkout repository
+   using: composite
+   steps:
+   -  name: Checkout repository
       uses: actions/checkout@v3
       with:
-        fetch-depth: '0'
-    - name: gh version
+         fetch-depth: '0'
+   -  name: gh version
       run: gh --version
-    - name: run file
+      shell: bash
+   -  name: run file
       run: ${{ github.action_path }}/entrypoint.sh
+      shell: bash
       with:
-        file: ${{ inputs.file }}
-        package: ${{ inputs.package }}         
-        
-              
+         file: ${{ inputs.file }}
+         package: ${{ inputs.package }}
+
+
 #runs:
-#  using: "docker"
-#  image: "Dockerfile"
-#  args: 
-#    - ${{ inputs.file }}
-#    - ${{ inputs.package }}  
-    
 branding:
-  icon: "git-pull-request"
-  color: "red"
+   icon: git-pull-request
+   color: red
+# ------------------
+# Orphaned comments:
+
+# ------------------
+# Was at begin of line:34 :#  using: "docker"
+# Was at begin of line:35 :#  image: "Dockerfile"
+# Was at begin of line:36 :#  args:
+# Was at begin of line:37 :#    - ${{ inputs.file }}
+# Was at begin of line:38 :#    - ${{ inputs.package }}
