--- a/action.yml
+++ b/action.yml
@@ -19,14 +19,8 @@ runs:
       uses: actions/checkout@v3
       with:
          fetch-depth: '0'
-   -  name: gh version
-      run: gh --version
-      shell: bash
-   -  name: env
-      run: env | sort
-      shell: bash
    -  name: run file
-      run: ${{ github.action_path }}/entrypoint.sh
+      run: ${{ github.action_path }}/entrypoint.sh ${{ inputs.file }} ${{ inputs.package }}.
       shell: bash
 
 
