--- a/action.yml
+++ b/action.yml
@@ -18,13 +18,12 @@ runs:
    -  name: Checkout repository
       uses: actions/checkout@v3
       with:
-         fetch-depth: '0'
-   -  name: echo run file
-      run: echo ${{ github.action_path }}/entrypoint.sh ${{ inputs.file }} ${{ inputs.package }}
-      shell: bash         
+         fetch-depth: '0'     
    -  name: run file
       run: ${{ github.action_path }}/entrypoint.sh ${{ inputs.file }} ${{ inputs.package }}
       shell: bash
+      env:
+       GH_TOKEN: ${{ github.token }}      
 
 
 #runs:
