--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
    file:
       description: 'The file to create. Default: cmd/version.go'
       required: false
-      default: cmd/version.go
+      default: cmd/github.go
    package:
       description: 'The package name for the package statement. Default: cmd'
       required: false
