#3 Prepare for versioned release

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 # action.yml
 name: Create a github.go file
-description: Create a github.go file containing the current GitHub release information.
+description: Create a github.go file containing GitHub release information.
 author: support@senzing.com
 
 inputs:
