#61 add actor override and readme example

--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ inputs:
       description: "The package name for the package statement. Default: cmd"
       required: false
       default: cmd
+   actor:
+      description: "Optional GitHub actor for signed commits. Must correspond to the noreply email used to create the GPG key."
+      required: false
 
 runs:
    using: composite
@@ -21,7 +24,7 @@ runs:
         with:
            fetch-depth: "0"
       - name: run file
-        run: ${{ github.action_path }}/entrypoint.sh ${{ inputs.file }} ${{ inputs.package }}
+        run: ${{ github.action_path }}/entrypoint.sh ${{ inputs.file }} ${{ inputs.package }} ${{ inputs.actor }}
         shell: bash
         env:
            GH_TOKEN: ${{ github.token }}
